kubernetes/tubearchivist/prod-d1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tubearchivist
  template:
    metadata:
      labels:
        app: tubearchivist
    spec:
      containers:
        - name: tubearchivist
          image: bbilly1/tubearchivist
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 30
          volumeMounts:
            - name: media
              mountPath: /youtube
            - name: cache
              mountPath: /cache
      volumes:
        - name: media
          nfs:
            server: 10.15.21.132
            path: /mnt/user/video/youtube/
        - name: cache
          persistentVolumeClaim:
            claimName: cache-pvc
