kubernetes/tubearchivist/prod-d1/elastic-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archivist-es
  namespace: tubearchivist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archivist-es
  template:
    metadata:
      labels:
        app: archivist-es
    spec:
      containers:
        - name: archivist-es
          image: bbilly1/tubearchivist-es
          ports:
            - containerPort: 9200
          volumeMounts:
            - name: cache
              mountPath: /usr/share/elasticsearch/data
          securityContext:
            runAsUser: 1000
            runAsGroup: 0
            allowPrivilegeEscalation: false
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: es-pvc
