kubernetes/tubearchivist/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tubearchivist
  namespace: tubearchivist
spec:
  type: NodePort
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: tubearchivist
